added blood suppression to preproc

--- a/preproc/Makefile
+++ b/preproc/Makefile
@@ -1,5 +1,6 @@
 
 LIBTIFF   := ../lib/tiff-4.1.0_mod/libtiff
+FFT2D     := ../lib/fft2d
 
 MODULES   := . util tiff kalman
 INCLUDES  := $(addprefix -I,$(MODULES))
@@ -14,6 +15,7 @@ LDLIBS    = -lm -lpthread $(LIBTIFF)/.libs/libtiff.a -llzma -ljbig -ljpeg -lz
 TARGET    = main
 
 SRCS_CC  := $(foreach sdir,$(MODULES),$(wildcard $(sdir)/*.c))
+SRCS_CC  += $(FFT2D)/fftsg.c
 SRCS_CXX := $(foreach sdir,$(MODULES),$(wildcard $(sdir)/*.cpp))
 OBJS      = $(filter %.o,$(SRCS_CC:.c=.o) $(SRCS_CXX:.cpp=.o))
 
