--- a/preprocessing/Makefile
+++ b/preprocessing/Makefile
@@ -3,7 +3,7 @@ LIB_DIR = lib
 default: preprocess
 
 preprocess: setup.py preprocess.pyx $(LIB_DIR)/libpreprocess.a
-	pip install -e . && rm -f celldemix.cpp  && rm -Rf build
+	pip install -e . && rm -f preprocess.cpp  && rm -Rf build
 
 $(LIB_DIR)/libpreprocess.a:
 	make -j 30 -C $(LIB_DIR) libpreprocess.a
