fixed C++ compile errors that were occurring on some environments

--- a/correct/lib/Makefile
+++ b/correct/lib/Makefile
@@ -1,7 +1,7 @@
 UTILS     = ../../utils
 
 CXX       = g++
-CXXFLAGS  = -O3 -fopenmp -fPIC -I$(UTILS)
+CXXFLAGS  = -std=c++11 -O3 -fopenmp -fPIC -I$(UTILS)
 
 TARGET = libcorrect.a
 
