incorporated GPU-accelerated motion correction from voltage_0.9 branch

--- a/correct/lib/Makefile
+++ b/correct/lib/Makefile
@@ -26,7 +26,7 @@ $(TARGET): $(OBJS)
 	$(CXX) -c $(CXXFLAGS) $< -o $@
 
 .cu.o:
-	$(CXX) -c -Xcompiler $(CXXFLAGS) $< -o $@
+	nvcc -c -Xcompiler -fPIC -std=c++11 -O3 $< -o $@
 
 
 clean:
